# lawrjosh.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  system_info.docx
.github/: publish.yml
Assignment 01/: system_info.docx  system_info.qmd
_site/: about.html  index.html  search.json
_site/Assignment 01/: system_info.docx  system_info.html
