[project]
name = "lawrjosh-github-io"
version = "0.0.1"
description = "Initial website for Joshua LawrenceGitHub"
authors = [
    {name = "Joshua Lawrence",email = "230762816+lawrjosh@users.noreply.github.com"}
]
license = {text = "^3.10"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "lawrjosh"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
